--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <link href="style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet" />
 
+    <link rel="icon" href="https://codevelom.netlify.app/assets/img/logo-light.png"/>
+
 </head>
 <body>
     
@@ -614,7 +616,7 @@
     <script type="text/javascript">
     (function () {
         var options = {
-            email: "codevelomgroup@gmail.com", // Email
+            whatsapp: "+2349035363231", // Email
             call: "+2349035363231", // Call phone number
             call_to_action: "Message us", // Call to action
             button_color: "#FF6550", // Color of button
