--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet" />
 
-    <link rel="icon" href="https://codevelom.netlify.app/assets/img/logo-light.png"/>
+    <link rel="icon" href="https://codevelom.netlify.app/assets/img/logo.png"/>
 
 </head>
 <body>
