--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
                                 Codevelom Technologies is a NG-based IT consulting and software development 
                                 company founded in 2017. We are a team of 10 employees, including technical experts and BAs.
                             </p>
-                            <!-- <form action="#">
+                            <form name="subscription" method="POST" data-netlify="true">
                                 <input type="email" placeholder="Your Email" class="form-control" name="email">
                                 <button type="submit"> <i class="arrow_right"></i></button>  
-                            </form> -->
+                            </form>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-6 item">
