--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <button type="submit" name="submit" id="submits">
+                                    <button type="submit" name="submit" id="submit">
                                         Send Message <i class="fa fa-paper-plane"></i>
                                     </button>
                                 </div>
