--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group">
-                                        <input class="form-control" id="name" name="name" placeholder="Name" type="text">
+                                        <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
@@ -466,13 +466,13 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="email" name="email" placeholder="Email*" type="email">
+                                        <input class="form-control" id="email" name="email" placeholder="Email*" type="email" required>
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <input class="form-control" id="phone" name="phone" placeholder="Phone" type="text">
+                                        <input class="form-control" id="phone" name="phone" placeholder="Phone" type="text" required>
                                         <span class="alert-error"></span>
                                     </div>
                                 </div>
@@ -480,7 +480,7 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="form-group comments">
-                                        <textarea class="form-control" id="comments" name="comments" placeholder="Tell Us About Project *"></textarea>
+                                        <textarea class="form-control" id="comments" name="comments" placeholder="Tell Us About Project *" required></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -515,7 +515,7 @@
                                 company founded in 2017. We are a team of 10 employees, including technical experts and BAs.
                             </p>
                             <form name="subscription" method="POST" data-netlify="true">
-                                <input type="email" placeholder="Your Email" class="form-control" name="email">
+                                <input type="email" placeholder="Your Email" class="form-control" name="email" required>
                                 <button type="submit"> <i class="arrow_right"></i></button>  
                             </form>
                         </div>
