--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
      <meta name="keyword" content="internet, nigeria, developer, real estate,business idea, technology company,technology,communication,
      data reseller,MTN,GLO,newsnow,news,AI, artificial intelligence" />
-     <meta property="og:title" content="Codevelom Technologies - Software Development Company">
-    <meta property="og:site_name" content="Codevelom Technologies">
+     <meta property="og:title" content="Techioex - Software Development Company">
+    <meta property="og:site_name" content="Techioex">
     <meta property="og:url" content="https://codevelom.netlify.app/">
-    <meta property="og:description" content="Codevelom Technologies is a software development company with 4-year history and a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
+    <meta property="og:description" content="Techioex is a software development company with 4-year history and a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://codevelom.netlify.app/assets/img/logo-light.png">
     <meta name="twitter:card" content="summary">
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://codevelom.netlify.app/assets/img/logo-light.png" />
     <!-- CSRF Token -->
 
-    <title>Codevelom Technologies - Software Development Company</title>
+    <title>Techioex - Software Development Company</title>
 
   
     <!-- ========== Start Stylesheet ========== -->
@@ -220,7 +220,7 @@
                            <div class="info">
                                <h4>Web Portal Development</h4>
                                <p>
-                                An established web portal development company, Codevelom Technologies can help you 
+                                An established web portal development company, Techioex can help you 
                                 create a web portal of any type to cover specific needs in engaging with your audience, be it your customers, partners, or employees.
                                </p>
                            </div>
@@ -252,7 +252,7 @@
                            <div class="info">
                                <h4>Ecommerce</h4>
                                <p>
-                                Codevelom Technologies brings in technology expertise and a 
+                                Techioex brings in technology expertise and a 
                                 problem-oriented approach to drive positive and tangible changes across your business resulting in cost savings and revenue growth.
                                </p>
                            </div>
@@ -394,8 +394,8 @@
                                 </div> -->
                                 <div class="info">
                                     <p>
-                                        Codevelom Technologies proved to be a professional service provider from the outset. We appreciate their proactive approach and ability to suggest improvements to a prospective solution on both architectural and business levels. We know we can always rely on 
-                                        Codevelom Technologies' various competencies when our clients require quality software which would facilitate their business success.
+                                        Techioex proved to be a professional service provider from the outset. We appreciate their proactive approach and ability to suggest improvements to a prospective solution on both architectural and business levels. We know we can always rely on 
+                                        Techioex' various competencies when our clients require quality software which would facilitate their business success.
                                     </p>
                                     <h4>Agholor Okoh</h4>
                                     <span> Chairman SOS</span>
@@ -409,8 +409,8 @@
                                 </div> -->
                                 <div class="info">
                                     <p>
-                                        Codevelom Technologies offers a high caliber of resources skilled in Website development, mobile app development and Quality Assurance. Over the past three years, Campusdata was very pleased with the service provided by Codevelom development teams and executive management. 
-                                        For accelerated project timelines which require skilled resources, Codevelom Technologies is a company that your team should consider.
+                                        Techioex offers a high caliber of resources skilled in Website development, mobile app development and Quality Assurance. Over the past three years, Campusdata was very pleased with the service provided by Codevelom development teams and executive management. 
+                                        For accelerated project timelines which require skilled resources, Techioex is a company that your team should consider.
                                     </p>
                                     <h4>Jimoh Gafar</h4>
                                     <span> CampusData MD</span>
@@ -511,7 +511,7 @@
                         <div class="f-item about">
                             <img src="assets/img/logo-light.png" alt="Logo">
                             <p>
-                                Codevelom Technologies is a NG-based IT consulting and software development 
+                                Techioex is a NG-based IT consulting and software development 
                                 company founded in 2017. We are a team of 10 employees, including technical experts and BAs.
                             </p>
                             <form name="subscription" method="POST" data-netlify="true">
@@ -614,7 +614,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
-                        <p>&copy; Copyright 2021. All Rights Reserved by <a href="#">Codevelom Technologies</a></p>
+                        <p>&copy; Copyright 2021. All Rights Reserved by <a href="#">Techioex</a></p>
                     </div>
                     <div class="col-lg-6 text-right link">
                         <ul>
