--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                            <div class="info">
                                <h4>CRM</h4>
                                <p>
-                                Codevelom helps businesses reduce their marketing, sales and customer service costs with all-round 
+                                Techioex helps businesses reduce their marketing, sales and customer service costs with all-round 
                                 CRM implementation and regain lost business opportunities through evolution of the existing CRM.
                                </p>
                            </div>
@@ -409,7 +409,7 @@
                                 </div> -->
                                 <div class="info">
                                     <p>
-                                        Techioex offers a high caliber of resources skilled in Website development, mobile app development and Quality Assurance. Over the past three years, Campusdata was very pleased with the service provided by Codevelom development teams and executive management. 
+                                        Techioex offers a high caliber of resources skilled in Website development, mobile app development and Quality Assurance. Over the past three years, Campusdata was very pleased with the service provided by Techioexdevelopment teams and executive management. 
                                         For accelerated project timelines which require skilled resources, Techioex is a company that your team should consider.
                                     </p>
                                     <h4>Jimoh Gafar</h4>
