--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="style.css" rel="stylesheet">
     <link href="assets/css/responsive.css" rel="stylesheet" />
 
-    <link rel="icon" href="https://codevelom.netlify.app/assets/img/logo.png"/>
+    <link rel="icon" href="assets/img/favicon-1.png"/>
 
 </head>
 <body>
@@ -58,8 +58,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo-light.png" class="logo logo-display" alt="Logo">
-                    <img src="assets/img/logo.png" class="logo logo-scrolled" alt="Logo">
+                    <img src="assets/img/logo-light-1.png" class="logo logo-display" alt="Logo">
+                    <img src="assets/img/logo-1.png" class="logo logo-scrolled" alt="Logo">
                 </a>
             </div>
             <!-- End Header Navigation -->
@@ -509,7 +509,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light.png" alt="Logo">
+                            <img src="assets/img/logo-light-1.png" alt="Logo">
                             <p>
                                 Techioex is a NG-based IT consulting and software development 
                                 company founded in 2017. We are a team of 10 employees, including technical experts and BAs.
