--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
      data reseller,MTN,GLO,newsnow,news,AI, artificial intelligence" />
      <meta property="og:title" content="Techioex - Software Development Company">
     <meta property="og:site_name" content="Techioex">
-    <meta property="og:url" content="https://codevelom.netlify.app/">
+    <meta property="og:url" content="https://www.techioex.com/">
     <meta property="og:description" content="Techioex is a software development company with 4-year history and a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://codevelom.netlify.app/assets/img/logo-light.png">
+    <meta property="og:image" content="https://www.techioex.com/assets/img/logo-light.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@sirelorgan">
     <meta name="twitter:title" content="Software Development Company">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://codevelom.netlify.app/assets/img/logo-light.png" />
+    <meta name="twitter:image" content="https://www.techioex.com/assets/img/logo-light.png" />
     <!-- CSRF Token -->
 
     <title>Techioex - Software Development Company</title>
@@ -581,7 +581,7 @@
                                         </div>
                                         <div class="content">
                                             <strong>Address:</strong>
-                                            Jikwoyi, Abuja
+                                            Ring Road, Challenge, Ibadan, Oyo, Nigeria
                                         </div>
                                     </li>
                                     <!-- <li>
@@ -661,7 +661,7 @@
         var options = {
             whatsapp: "+2349035363231", // Email
             call: "+2349035363231", // Call phone number
-            call_to_action: "Message us", // Call to action
+            call_to_action: "Talk to us here", // Call to action
             button_color: "#FF6550", // Color of button
             position: "right", // Position may be 'right' or 'left'
             order: "email,call", // Order of buttons
