--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
                             <p>
-                                Phase II, <br> Jikwoyi, Abuja <br>
+                                Ring Road, Challenge, Ibadan,  <br> Oyo, Nigeria. <br>
                             </p>
                         </li>
                         <li>
