--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="twitter:title" content="Software Development Company">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="https://www.techioex.com/assets/img/logo-light.png" />
+    <meta name="google-site-verification" content="ovnksHVNLLqR1WDEvw0y22J9A4hXk6a2AHAIhCzjs-o" />
     <!-- CSRF Token -->
 
     <title>Techioex - Software Development Company</title>
