--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <meta property="og:title" content="Techioex - Software Development Company">
     <meta property="og:site_name" content="Techioex">
     <meta property="og:url" content="https://www.techioex.com/">
-    <meta property="og:description" content="Techioex is a software development company with 4-year history and a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
+    <meta property="og:description" content="Techioex is a software development company with a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.techioex.com/assets/img/logo-light.png">
     <meta name="twitter:card" content="summary">
@@ -16,6 +16,8 @@
     <meta name="twitter:title" content="Software Development Company">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="https://www.techioex.com/assets/img/logo-light.png" />
+    <meta name="description" content="Techioex is a software development company with a team of 5 high-level specialists. We transform businesses with powerful and adaptable digital 
+    solutions that satisfy the needs of today and unlock the opportunities of tomorrow." />
     <!-- CSRF Token -->
 
     <title>Techioex - Software Development Company</title>
