--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <div class="row align-center">
 
                     <div class="col-lg-6 info">
+                        <h1 class="wow fadeInRight d-none" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h1>
                         <h2 class="wow fadeInRight" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h2>
                         <p class="wow fadeInLeft" data-wow-delay="500ms">
                             Since 2017. We transform businesses with powerful and adaptable digital 
