--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link href="assets/css/responsive.css" rel="stylesheet" />
 
     <link rel="icon" href="assets/img/favicon-1.png"/>
+    <meta name="yandex-verification" content="5d8156584d5572ab" />
 </head>
 <body>
     
