--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-     <meta name="keyword" content="internet, nigeria, developer, real estate,business idea, technology company,technology,communication,
-     data reseller,MTN,GLO,newsnow,news,AI, artificial intelligence" />
+     <meta name="keyword" content="internet, nigeria, developer, real estate,business idea, technology company,technology,software,
+     data reseller,MTN,GLO,newsnow,news,AI, artificial intelligence,iot,nigeria" />
      <meta property="og:title" content="Techioex - Software Development Company">
     <meta property="og:site_name" content="Techioex">
     <meta property="og:url" content="https://www.techioex.com/">
@@ -16,7 +16,7 @@
     <meta name="twitter:title" content="Software Development Company">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="https://www.techioex.com/assets/img/logo-light.png" />
-    <meta name="description" content="Techioex is a software development company with a team of 5 high-level specialists. We transform businesses with powerful and adaptable digital 
+    <meta name="description" content="We transform businesses with powerful and adaptable digital 
     solutions that satisfy the needs of today and unlock the opportunities of tomorrow." />
     <!-- CSRF Token -->
 
@@ -103,8 +103,8 @@
                         <h1 class="wow fadeInRight d-none" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h1>
                         <h2 class="wow fadeInRight" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h2>
                         <p class="wow fadeInLeft" data-wow-delay="500ms">
-                            Since 2017. We transform businesses with powerful and adaptable digital 
-                            solutions that satisfy the needs of today and unlock the opportunities of tomorrow.
+                            Techioex is a NG-based IT consulting and software development company with Reg. No. 3386936. We transform businesses with
+                             powerful and adaptable digital solutions that satisfy the needs of today and unlock the opportunities of tomorrow.
                         </p>
                         <a class="btn btn-md btn-light effect wow fadeInUp" data-wow-delay="700ms" href="#contact">Get Started <i class="fas fa-angle-right"></i></a>
                     </div>
@@ -515,7 +515,7 @@
                             <img src="assets/img/logo-light-1.png" alt="Logo">
                             <p>
                                 Techioex is a NG-based IT consulting and software development 
-                                company founded in 2017. We are a team of 10 employees, including technical experts and BAs.
+                                company with Reg. No. 3386936. We are a team of 10 employees, including technical experts and BAs.
                             </p>
                             <form name="subscription" method="POST" data-netlify="true">
                                 <input type="email" placeholder="Your Email" class="form-control" name="email" required>
