--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@
         </div>
     </div>
     <!-- End Contact Area -->
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
     <!-- End Contact Area -->
     <footer class="bg-dark text-light">
         <div class="container">
@@ -676,5 +679,27 @@
     })();
 </script>
 <!-- /GetButton.io widget -->
+<!-- Messenger Chat Plugin Code -->
+<div id="fb-root"></div>
+
+<script>
+  var chatbox = document.getElementById('fb-customer-chat');
+  chatbox.setAttribute("page_id", "104509801873457");
+  chatbox.setAttribute("attribution", "page_inbox");
+  window.fbAsyncInit = function() {
+    FB.init({
+      xfbml            : true,
+      version          : 'v11.0'
+    });
+  };
+
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 </html>
