--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logo-light-1.png" class="logo logo-display" alt="Logo">
-                    <img src="assets/img/logo-1.png" class="logo logo-scrolled" alt="Logo">
+                    <img src="assets/logo-light.png" class="logo logo-display" alt="Logo">
+                    <img src="assets/logo.png" class="logo logo-scrolled" alt="Logo">
                 </a>
             </div>
             <!-- End Header Navigation -->
@@ -516,7 +516,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/img/logo-light-1.png" alt="Logo">
+                            <img src="assets/logo-light.png" alt="Logo">
                             <p>
                                 Techioex is a NG-based IT consulting and software development 
                                 company with Reg. No. 3386936. We are a team of 10 employees, including technical experts and BAs.
