--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-     <meta name="keyword" content="technology,software,application software,what is software,accounting software,computer software,accurate football prediction website,how to create a website
-     website,it consulting,bureau of public procurement,procurement" />
+     <meta name="keyword" content="technology,software,application software,what is software,accounting software,computer software,accurate football prediction website,how to create a website,website,it consulting,bureau of public procurement,procurement" />
      <meta property="og:title" content="Techioex - Software Development Company">
     <meta property="og:site_name" content="Techioex">
     <meta property="og:url" content="https://www.techioex.com/">
