--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="icon" href="assets/img/favicon-1.png"/>
     <meta name="yandex-verification" content="5d8156584d5572ab" />
 </head>
-<body>
+<body id="google_translate_element">
     
 
 <!-- Preloader Start -->
@@ -681,6 +681,11 @@
 <!-- /GetButton.io widget -->
 <!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
+
+<script type="text/javascript" src=
+"https://translate.google.com/translate_a/element.js?
+        cb=googleTranslateElementInit">
+    </script> 
 
 <script>
   var chatbox = document.getElementById('fb-customer-chat');
