--- a/index.html
+++ b/index.html
@@ -682,10 +682,12 @@
 <!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
 
-<script type="text/javascript" src=
-"https://translate.google.com/translate_a/element.js?
-        cb=googleTranslateElementInit">
-    </script> 
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
+<script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+</script>
 
 <script>
   var chatbox = document.getElementById('fb-customer-chat');
