translate new position

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="icon" href="assets/img/favicon-1.png"/>
     <meta name="yandex-verification" content="5d8156584d5572ab" />
 </head>
-<body id="google_translate_element">
+<body>
     
 
 <!-- Preloader Start -->
@@ -48,7 +48,7 @@
 <!-- Preloader Ends -->
 
 <header id="home">
-
+    <div id="google_translate_element"></div>
     <!-- Start Navigation -->
     <nav class="navbar navbar-default attr-bg navbar-fixed white no-background bootsnav">
 
