--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- Preloader Ends -->
 
 <header id="home">
-    <div id="google_translate_element"></div>
+    <!-- <div id="google_translate_element"></div> -->
     <!-- Start Navigation -->
     <nav class="navbar navbar-default attr-bg navbar-fixed white no-background bootsnav">
 
@@ -682,12 +682,12 @@
 <!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
 
-<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
+<!-- <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> 
 <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
-</script>
+</script> -->
 
 <script>
   var chatbox = document.getElementById('fb-customer-chat');
