--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                                         </div>
                                         <div class="content">
                                             <strong>Address:</strong>
-                                            Ring Road, Challenge, Ibadan, Oyo, Nigeria
+                                            Mayfair Gardens, Lekki Epe Expressway, Ibeju Lekki, Lagos State.
                                         </div>
                                     </li>
                                     <!-- <li>
