--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
                             <p>
-                                Ring Road, Challenge, Ibadan,  <br> Oyo, Nigeria. <br>
+                                Mayfair Gardens, Lekki Epe Expressway,   <br> Ibeju Lekki, Lagos State. <br>
                             </p>
                         </li>
                         <li>
