--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-     <meta name="keyword" content="technology,software,application software,what is software,accounting software,computer software,accurate football prediction website,how to create a website,website,it consulting,bureau of public procurement,procurement" />
+     <meta name="keyword" content="technology,software,application software,what is software,accounting software, crypto,web3,dApp,python,ML,
+     computer software,accurate football prediction website,how to create a website,website,it consulting,bureau of public procurement,procurement" />
      <meta property="og:title" content="Techioex - Software Development Company">
     <meta property="og:site_name" content="Techioex">
     <meta property="og:url" content="https://www.techioex.com/">
     <meta property="og:description" content="Techioex is a software development company with a team of 5 high-level specialists. We deliver software solutions that help businesses succeed.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.techioex.com/assets/img/logo-light.png">
+    <meta property="og:image" content="https://www.techioex.com/logo1.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@sirelorgan">
     <meta name="twitter:title" content="Software Development Company">
     <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="https://www.techioex.com/assets/img/logo-light.png" />
+    <meta name="twitter:image" content="https://www.techioex.com/logo1.png" />
     <meta name="description" content="We transform businesses with powerful and adaptable digital 
     solutions that satisfy the needs of today and unlock the opportunities of tomorrow." />
     <meta name="facebook-domain-verification" content="d8pj6kv5onh78awe52c62du61xbz3j" />
@@ -60,8 +61,8 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/logo-light.png" class="logo logo-display" alt="Logo">
-                    <img src="assets/logo.png" class="logo logo-scrolled" alt="Logo">
+                    <img src="logo-white.png" class="logo logo-display" alt="Logo">
+                    <img src="logo1.png" class="logo logo-scrolled" alt="Logo">
                 </a>
             </div>
             <!-- End Header Navigation -->
@@ -515,7 +516,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 item">
                         <div class="f-item about">
-                            <img src="assets/logo-light.png" alt="Logo">
+                            <img src="logo-white.png" alt="Logo" class="w-25">
                             <p>
                                 Techioex is a NG-based IT consulting and software development 
                                 company with Reg. No. 3386936. We are a team of 10 employees, including technical experts and BAs.
