--- a/index.html
+++ b/index.html
@@ -101,13 +101,21 @@
                 <div class="row align-center">
 
                     <div class="col-lg-6 info">
-                        <h1 class="wow fadeInRight d-none" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h1>
-                        <h2 class="wow fadeInRight" data-wow-defaul="300ms">We're building software<strong>to manage business</strong></h2>
+                        <h1 class="wow fadeInRight d-none" data-wow-defaul="300ms">
+                        </h1>
+                        <h2 class="wow fadeInRight" data-wow-defaul="300ms">
+                            Thoughtful digital experiences that work.
+                           
+                        </h2>
                         <p class="wow fadeInLeft" data-wow-delay="500ms">
-                            Techioex is a NG-based IT consulting and software development company with Reg. No. 3386936. We transform businesses with
-                             powerful and adaptable digital solutions that satisfy the needs of today and unlock the opportunities of tomorrow.
+                            Techioex is a user experience design and development consultancy that helps businesses make complex things simple through
+                             application of our passion for technology to create successful products and solutions for our clients.
+                            <!-- Techioex is a NG-based IT consulting and software development company with Reg. No. 3386936. We transform businesses with
+                             powerful and adaptable digital solutions that satisfy the needs of today and unlock the opportunities of tomorrow. -->
                         </p>
-                        <a class="btn btn-md btn-light effect wow fadeInUp" data-wow-delay="700ms" href="#contact">Get Started <i class="fas fa-angle-right"></i></a>
+                        <a class="btn btn-md btn-light effect wow fadeInUp" data-wow-delay="700ms" href="#contact">
+                            Lets talk about your Project
+                        <i class="fas fa-angle-right"></i></a>
                     </div>
 
                      <div class="col-lg-5 offset-lg-1 thumb wow fadeInRight" data-wow-delay="900ms">
@@ -133,13 +141,15 @@
                 <div class="row align-center">
                     <div class="col-lg-6">
                         <div class="thumb">
-                            <img class="wow fadeInLeft" data-wow-delay="300ms" src="assets/img/dashboard/8.png" alt="Thumb">
+                            <img class="wow fadeInLeft" data-wow-delay="300ms" src="team.jpg" alt="Thumb">
                             <img class="wow fadeInUp" data-wow-delay="500ms" src="assets/img/dashboard/9.png" alt="Thumb">
                         </div>
                     </div>
                     <div class="col-lg-6 info wow fadeInRight">
-                        <h4>Story about us</h4>
-                        <h2>Perfect place to Design, Develop Software.</h2>
+                        <h4>Why Choose Us</h4>
+                        <h2>
+                            Real People. Real Passion.
+                        </h2>
                         <ul>
                             <li>
                                 <h5>Software Development</h5>
