--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                            
                         </h2>
                         <p class="wow fadeInLeft" data-wow-delay="500ms">
-                            Techioex is a user experience design and development consultancy that helps businesses make complex things simple through
-                             application of our passion for technology to create successful products and solutions for our clients.
+                            Techioex is a user experience design and development consultancy that helps businesses make complex things simple, through
+                             the application of our passion for technology to create successful products and solutions for our clients.
                             <!-- Techioex is a NG-based IT consulting and software development company with Reg. No. 3386936. We transform businesses with
                              powerful and adaptable digital solutions that satisfy the needs of today and unlock the opportunities of tomorrow. -->
                         </p>
