--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:image" content="https://www.techioex.com/logo1.png" />
     <meta name="description" content="We transform businesses with powerful and adaptable digital 
     solutions that satisfy the needs of today and unlock the opportunities of tomorrow." />
-    <meta name="facebook-domain-verification" content="d8pj6kv5onh78awe52c62du61xbz3j" />
+    <!-- <meta name="facebook-domain-verification" content="d8pj6kv5onh78awe52c62du61xbz3j" /> -->
     <!-- CSRF Token -->
 
     <title>Techioex - Software Development Company</title>
