--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
             call_to_action: "Talk to us here", // Call to action
             button_color: "#FF6550", // Color of button
             position: "right", // Position may be 'right' or 'left'
-            order: "email,call", // Order of buttons
+            order: "whatsapp" //"email,call", // Order of buttons
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
@@ -703,23 +703,23 @@
 </script> -->
 
 <script>
-  var chatbox = document.getElementById('fb-customer-chat');
-  chatbox.setAttribute("page_id", "104509801873457");
-  chatbox.setAttribute("attribution", "page_inbox");
-  window.fbAsyncInit = function() {
-    FB.init({
-      xfbml            : true,
-      version          : 'v11.0'
-    });
-  };
+//   var chatbox = document.getElementById('fb-customer-chat');
+//   chatbox.setAttribute("page_id", "104509801873457");
+//   chatbox.setAttribute("attribution", "page_inbox");
+//   window.fbAsyncInit = function() {
+//     FB.init({
+//       xfbml            : true,
+//       version          : 'v11.0'
+//     });
+//   };
 
-  (function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
+//   (function(d, s, id) {
+//     var js, fjs = d.getElementsByTagName(s)[0];
+//     if (d.getElementById(id)) return;
+//     js = d.createElement(s); js.id = id;
+//     js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+//     fjs.parentNode.insertBefore(js, fjs);
+//   }(document, 'script', 'facebook-jssdk'));
 </script>
 </body>
 </html>
